// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayerStatRow > matches snapshot > PlayerStatRow - default 1`] = `
<DocumentFragment>
  <table
    class="MuiTable-root css-73gcid-MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root css-qjqu21-MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1lbim4g-MuiTableCell-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1r5ov08-MuiTypography-root"
          >
            #23
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-kzi932-MuiTypography-root"
          >
            LeBron
            <span
              aria-label="Hot Streak (3+ makes)"
              class="MuiBox-root css-aimfjx"
              data-mui-internal-clone-element="true"
            >
              🔥
            </span>
          </span>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          35
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          27
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          7
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          42.9%
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          6
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          8
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          75.0%
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          8
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          10
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1fyrd7h-MuiTableCell-root"
        >
          2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-uhcvk6-MuiTableCell-root"
        >
          +12
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PlayerStatRow > matches snapshot when fouled out > PlayerStatRow - fouled out 1`] = `
<DocumentFragment>
  <table
    class="MuiTable-root css-73gcid-MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root css-qjqu21-MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1lbim4g-MuiTableCell-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1r5ov08-MuiTypography-root"
          >
            #23
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-kzi932-MuiTypography-root"
          >
            LeBron
            <span
              aria-label="Hot Streak (3+ makes)"
              class="MuiBox-root css-aimfjx"
              data-mui-internal-clone-element="true"
            >
              🔥
            </span>
          </span>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          35
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          27
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          7
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          42.9%
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          6
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          8
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          75.0%
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          8
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          10
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-tpx6f6-MuiTableCell-root"
        >
          5
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-uhcvk6-MuiTableCell-root"
        >
          +12
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PlayerStatRow > matches snapshot when in foul trouble > PlayerStatRow - foul trouble 1`] = `
<DocumentFragment>
  <table
    class="MuiTable-root css-73gcid-MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root css-qjqu21-MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1lbim4g-MuiTableCell-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1r5ov08-MuiTypography-root"
          >
            #23
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-kzi932-MuiTypography-root"
          >
            LeBron
            <span
              aria-label="Hot Streak (3+ makes)"
              class="MuiBox-root css-aimfjx"
              data-mui-internal-clone-element="true"
            >
              🔥
            </span>
          </span>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          35
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          27
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          7
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          42.9%
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          6
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          8
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          75.0%
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          8
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          10
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-ca98u-MuiTableCell-root"
        >
          3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1too57x-MuiTableCell-root"
        >
          4
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-uhcvk6-MuiTableCell-root"
        >
          +12
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
